# mci

./: mci.cabal  program
app/: Main.hs  grammar
app/Analysis/: Environment.hs  Resolution.hs  TypeCheck.hs
app/Eval/: Interpreter.hs  InterpreterIO.hs  Syntax.hs
app/Introduction/: Interpreter.hs  InterpreterIO.hs  Parser.hs  Syntax.hs
app/Introduction/examples/: program
app/Lexer/: Lexer.hs  Lexer.x
app/Parser/: Parser.hs
app/Syntax/: Syntax.hs  Utils.hs
examples/: merge  program
