cabal-version:      2.4
name:               mci
version:            0.1.0.0
author:             dbnor0
maintainer:         dbnor0@gmail.com
extra-source-files: CHANGELOG.md
executable mci
  main-is:          Main.hs

  other-modules:
    Eval.Interpreter
    Eval.InterpreterIO
    Eval.Syntax
    Parser.Parser
    Syntax.Syntax

  default-extensions:
    FlexibleContexts
    LambdaCase
    OverloadedStrings

  build-depends:    
    base ^>=4.14.3.0
    , array
    , bytestring
    , containers
    , directory
    , megaparsec
    , microlens-platform
    , mtl 
    , text
  hs-source-dirs:   app
  default-language: Haskell2010
